[package]
name = "key-vault"
version = "0.1.0"
edition = "2021"
authors = ["Ritesh Das"]
description = "A minimal hierarchical deterministic wallet library"

[dependencies]
# Cryptographic operations
secp256k1 = "0.27.0"
bitcoin_hashes = "0.12.0"
hmac = "0.12.1"
pbkdf2 = "0.12.2"
sha2 = "0.10.7"

# Mnemonic word list and operations
rand = "0.8.5"
rand_core = "0.6.4"
bip39 = "1.0.1"

# Key management
zeroize = "1.6.0"

# Serialization
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
hex = "0.4.3"